<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="action_settings">Settings</string>

    <string name="project1">Spotify Streamer</string>
    <string name="project2">Scores App</string>
    <string name="project3">Library App</string>
    <string name="project4">Make it Bigger</string>
    <string name="project5">XYZ Reader</string>
    <string name="project6">Capstone: My Own App</string>
</resources>
