<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project1"
        android:id="@+id/button"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#ffff8a00"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project2"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="#ffff8a00"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project3"
        android:id="@+id/button3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:background="#ffff8a00"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project4"
        android:id="@+id/button4"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:background="#ffff8a00"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project5"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4"
        android:background="#ffff8a00"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project6"
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button5"
        android:background="#ffff2800"
        android:width="250dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="sendMessage" />

</RelativeLayout>
